fixed navbar z-index

--- a/src/assets/styles/layout/_navigation.scss
+++ b/src/assets/styles/layout/_navigation.scss
@@ -1,6 +1,6 @@
 .navbar {
   position: absolute;
-  top: 0;
+  top: -100%;
   left: 0;
   width: 100%;
   height: 100%;
@@ -16,7 +16,7 @@
 
   &.open {
     .navbar-wrapper {
-      transform: translateY(0);
+      transform: translateY(100%);
     }
 
     #navbar-toggle {
@@ -45,7 +45,6 @@
   &-wrapper {
     height: 100%;
     background-color: white;
-    transform: translateY(-100%);
     transition: transform 0.5s ease-in-out;
 
     @include media-breakpoint-up(md) {
@@ -63,7 +62,7 @@
   position: fixed;
   top: 20px;
   right: 20px;
-  z-index: inherit;
+  z-index: 1;
 
   @include media-breakpoint-up(md) {
     display: none;
@@ -171,6 +170,7 @@
   padding: 20px;
   display: block;
   line-height: 0;
+  z-index: 2000;
 }
 
 .blur-2 {
